# GPT2

./: .gitignore  README.md  config.py  inference.py  pyproject.toml  training.py
src/: attention.py  gpt_config.py  model.py  positional.py  utils.py
tests/: test_encode.py  test_gpt.py
